Bug 317345, nsLocalFile(OSX)::IsHidden is broken garbage.  Use kFSCatInfoFinderInfo to obtain Finder attributes.  r=josh sr=smfr